z-index fixes

--- a/app/App.styl
+++ b/app/App.styl
@@ -17,7 +17,7 @@ html, body
 		left: 0
 		width: 100%
 		height: 100%
-		z-index: 2
+		z-index: 4
 
 	.sectionButton
 		position: fixed
