--- a/app/settings/SettingsPane.styl
+++ b/app/settings/SettingsPane.styl
@@ -12,7 +12,7 @@
 	right: 0
 	width: 400px
 	height: 100%
-	z-index: 3
+	z-index: 5
 
 	.settingsPaneTitle
 		margin-top: 0
