--- a/app/ui/IconButton.styl
+++ b/app/ui/IconButton.styl
@@ -3,7 +3,7 @@
 	cursor: pointer
 	font-size: 24px
 	text-shadow: 0 0 4px black
-	z-index: 1
+	z-index: 3
 	text-decoration: none
 	transition: all 0.25s ease-in-out
 
